syntax = "proto3";

option go_package = "product/grpc";

service ProductServive {
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc GetAllProduct (Empty) returns (GetAllProductResponse);
  rpc GetProductByID (ID) returns (ProductResponse);
  rpc UpdateProductByID (UpdateProductByIDRequest) returns (ProductResponse);
  rpc DeleteProductByID (ID) returns (ID);
}

message CreateProductRequest {
  string name = 1;
  float price = 2;
}

message UpdateProductByIDRequest {
  string id = 1;
  string name = 2;
  string category = 3;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string category = 3;
}

message GetAllProductResponse {
  repeated ProductResponse products = 1;
}

message ID {
  string id = 1;
}

message Empty {
}